@@ -1,15 +1,21 @@
 package com.siakad.views.panels;
 
 import com.google.gson.JsonArray;
+import com.google.gson.JsonElement;
 import com.google.gson.JsonObject;
+import com.siakad.services.AkademikService;
 import com.siakad.services.MahasiswaService;
 import com.siakad.utils.JwtHelper;
+import com.siakad.utils.SwingUi;
 
 import javax.swing.*;
 import javax.swing.border.EmptyBorder;
 import javax.swing.table.*;
 import java.awt.*;
 import java.awt.event.*;
+import java.time.Year;
+import java.util.ArrayList;
+import java.util.List;
 
 /**
  * MahasiswaPanel - CRUD Data Mahasiswa
@@ -169,8 +175,8 @@ public class MahasiswaPanel extends JPanel {
         table.getColumnModel().getColumn(6).setCellRenderer(new StatusBadgeRenderer());
         table.getColumnModel().getColumn(7).setCellRenderer(new ActionRenderer());
         table.getColumnModel().getColumn(7).setCellEditor(new ActionEditor());
-        table.getColumnModel().getColumn(7).setMinWidth(130);
-        table.getColumnModel().getColumn(7).setMaxWidth(130);
+        table.getColumnModel().getColumn(7).setMinWidth(210);
+        table.getColumnModel().getColumn(7).setMaxWidth(210);
 
         JScrollPane scrollPane = new JScrollPane(table);
         scrollPane.setBackground(TABLE_BG);
@@ -432,28 +438,15 @@ public class MahasiswaPanel extends JPanel {
         JTextField fEmail    = makeField();
         JTextField fTelp     = makeField();
 
-        // Jurusan dropdown
-        String[] jurusanList = {"Komputerisasi Akuntansi", "Hubungan Masyarakat", "Administrasi Bisnis", "Management Informatika"};
-        JComboBox<String> cmbJurusan = new JComboBox<>(jurusanList);
+        JComboBox<String> cmbJurusan = new JComboBox<>();
+        cmbJurusan.addItem("Memuat jurusan...");
         styleCombo(cmbJurusan);
 
-        // Program Studi per jurusan
-        String[][] prodiMap = {
-            {"D3 Komputerisasi Akuntansi", "D4 Akuntansi Digital"},
-            {"D3 Hubungan Masyarakat", "D4 Komunikasi Strategis"},
-            {"D3 Administrasi Bisnis", "D4 Manajemen Pemasaran"},
-            {"D3 Manajemen Informatika", "D4 Rekayasa Perangkat Lunak"}
-        };
-        JComboBox<String> cmbProdi = new JComboBox<>(prodiMap[0]);
-        styleCombo(cmbProdi);
-        cmbJurusan.addActionListener(e -> {
-            int idx = cmbJurusan.getSelectedIndex();
-            cmbProdi.removeAllItems();
-            for (String p : prodiMap[idx]) cmbProdi.addItem(p);
-        });
+        JTextField fProdi = makeField();
+        loadJurusanCombo(cmbJurusan, null);
 
-        JTextField fAngkatan = makeField();
-        JTextField fSemester = makeField();
+        JComboBox<Integer> cmbAngkatan = buildAngkatanCombo();
+        JSpinner spSemester = makeSemesterSpinner();
         JComboBox<String> cmbStatus = new JComboBox<>(new String[]{"aktif", "cuti", "lulus", "drop_out"});
         styleCombo(cmbStatus);
         JTextField fPassword = nim == null ? makeField() : null;
@@ -470,10 +463,13 @@ public class MahasiswaPanel extends JPanel {
                             fNama.setText(d.get("nama").getAsString());
                             if (!d.get("email").isJsonNull()) fEmail.setText(d.get("email").getAsString());
                             if (!d.get("no_telp").isJsonNull()) fTelp.setText(d.get("no_telp").getAsString());
-                            if (!d.get("jurusan").isJsonNull()) cmbJurusan.setSelectedItem(d.get("jurusan").getAsString());
-                            if (!d.get("program_studi").isJsonNull()) cmbProdi.setSelectedItem(d.get("program_studi").getAsString());
-                            if (!d.get("angkatan").isJsonNull()) fAngkatan.setText(d.get("angkatan").getAsString());
-                            fSemester.setText(d.get("semester").getAsString());
+                            if (!d.get("jurusan").isJsonNull()) loadJurusanCombo(cmbJurusan, d.get("jurusan").getAsString());
+                            if (!d.get("program_studi").isJsonNull()) fProdi.setText(d.get("program_studi").getAsString());
+                            if (!d.get("angkatan").isJsonNull()) selectAngkatan(cmbAngkatan, d.get("angkatan").getAsInt());
+                            if (!d.get("semester").isJsonNull()) {
+                                int semester = d.get("semester").getAsInt();
+                                spSemester.setValue(Math.max(1, Math.min(14, semester)));
+                            }
                             cmbStatus.setSelectedItem(d.get("status").getAsString());
                         }
                     } catch (Exception ignored) {}
@@ -487,12 +483,12 @@ public class MahasiswaPanel extends JPanel {
         addRow(panel, gbc, r++, "Email", fEmail);
         addRow(panel, gbc, r++, "No. Telp", fTelp);
         addRow(panel, gbc, r++, "Jurusan", cmbJurusan);
-        addRow(panel, gbc, r++, "Program Studi", cmbProdi);
-        addRow(panel, gbc, r++, "Angkatan", fAngkatan);
-        addRow(panel, gbc, r++, "Semester", fSemester);
+        addRow(panel, gbc, r++, "Program Studi", fProdi);
+        addRow(panel, gbc, r++, "Angkatan", cmbAngkatan);
+        addRow(panel, gbc, r++, "Semester", spSemester);
         gbc.gridx = 0; gbc.gridy = r; panel.add(makeLabel("Status"), gbc);
         gbc.gridx = 1; panel.add(cmbStatus, gbc); r++;
-        if (nim == null) addRow(panel, gbc, r++, "Password (default=NIM)", fPassword);
+        if (nim == null) addRow(panel, gbc, r++, "Password (default=mhs123)", fPassword);
 
         JButton btnSave = buildBtn(nim == null ? "💾  Simpan" : "💾  Update", BLUE);
         gbc.gridx = 0; gbc.gridy = r; gbc.gridwidth = 2; gbc.insets = new Insets(18, 4, 4, 4);
@@ -503,17 +499,15 @@ public class MahasiswaPanel extends JPanel {
                 JOptionPane.showMessageDialog(dialog, "NIM dan Nama wajib diisi!", "Validasi", JOptionPane.WARNING_MESSAGE);
                 return;
             }
-            Integer angkatan = null;
-            Integer semester = null;
-            try {
-                if (!fAngkatan.getText().trim().isEmpty()) {
-                    angkatan = Integer.parseInt(fAngkatan.getText().trim());
-                }
-                if (!fSemester.getText().trim().isEmpty()) {
-                    semester = Integer.parseInt(fSemester.getText().trim());
-                }
-            } catch (NumberFormatException ex) {
-                JOptionPane.showMessageDialog(dialog, "Angkatan dan semester harus berupa angka.", "Validasi", JOptionPane.WARNING_MESSAGE);
+            String selectedJurusan = String.valueOf(cmbJurusan.getSelectedItem());
+            if (selectedJurusan.isBlank() || selectedJurusan.startsWith("Belum ada") || selectedJurusan.startsWith("Memuat")) {
+                JOptionPane.showMessageDialog(dialog, "Pilih jurusan dari master jurusan terlebih dahulu.", "Validasi", JOptionPane.WARNING_MESSAGE);
+                return;
+            }
+            Integer angkatan = (Integer) cmbAngkatan.getSelectedItem();
+            int selectedSemester = ((Number) spSemester.getValue()).intValue();
+            if (selectedSemester <= 0) {
+                JOptionPane.showMessageDialog(dialog, "Semester harus lebih dari 0.", "Validasi", JOptionPane.WARNING_MESSAGE);
                 return;
             }
             JsonObject body = new JsonObject();
@@ -521,10 +515,10 @@ public class MahasiswaPanel extends JPanel {
             body.addProperty("nama", fNama.getText().trim());
             body.addProperty("email", fEmail.getText().trim());
             body.addProperty("no_telp", fTelp.getText().trim());
-            body.addProperty("jurusan", (String) cmbJurusan.getSelectedItem());
-            body.addProperty("program_studi", (String) cmbProdi.getSelectedItem());
-            if (angkatan != null) body.addProperty("angkatan", angkatan);
-            if (semester != null) body.addProperty("semester", semester);
+            body.addProperty("jurusan", selectedJurusan);
+            body.addProperty("program_studi", fProdi.getText().trim());
+            body.addProperty("angkatan", angkatan);
+            body.addProperty("semester", selectedSemester);
             body.addProperty("status", (String) cmbStatus.getSelectedItem());
             if (nim == null && fPassword != null) body.addProperty("password", fPassword.getText().trim());
 
@@ -549,6 +543,7 @@ public class MahasiswaPanel extends JPanel {
         });
 
         dialog.add(new JScrollPane(panel) {{ setBorder(null); getViewport().setBackground(CARD_BG); }});
+        SwingUi.configurePopups(dialog);
         dialog.setVisible(true);
     }
 
@@ -587,6 +582,43 @@ public class MahasiswaPanel extends JPanel {
                 } catch (Exception ex) {
                     JOptionPane.showMessageDialog(MahasiswaPanel.this, "Error: " + ex.getMessage(),
                             "Error", JOptionPane.ERROR_MESSAGE);
+                }
+            }
+        }.execute();
+    }
+
+    private void deleteMahasiswa(String nim) {
+        int confirm = JOptionPane.showConfirmDialog(
+                this,
+                "Hapus mahasiswa dengan NIM " + nim + "?\n\nData KRS, nilai, kehadiran, pembayaran, dan akun login mahasiswa ini juga akan ikut dihapus.",
+                "Konfirmasi Hapus Mahasiswa",
+                JOptionPane.YES_NO_OPTION,
+                JOptionPane.WARNING_MESSAGE
+        );
+        if (confirm != JOptionPane.YES_OPTION) {
+            return;
+        }
+
+        new SwingWorker<JsonObject, Void>() {
+            @Override protected JsonObject doInBackground() throws Exception {
+                return MahasiswaService.delete(nim);
+            }
+
+            @Override protected void done() {
+                try {
+                    JsonObject response = get();
+                    boolean success = response.has("success") && response.get("success").getAsBoolean();
+                    JOptionPane.showMessageDialog(
+                            MahasiswaPanel.this,
+                            response.has("message") ? response.get("message").getAsString() : (success ? "Mahasiswa berhasil dihapus." : "Mahasiswa gagal dihapus."),
+                            success ? "Berhasil" : "Gagal",
+                            success ? JOptionPane.INFORMATION_MESSAGE : JOptionPane.WARNING_MESSAGE
+                    );
+                    if (success) {
+                        loadData();
+                    }
+                } catch (Exception ex) {
+                    JOptionPane.showMessageDialog(MahasiswaPanel.this, ex.getMessage(), "Error", JOptionPane.ERROR_MESSAGE);
                 }
             }
         }.execute();
@@ -660,6 +692,26 @@ public class MahasiswaPanel extends JPanel {
         return f;
     }
 
+    private JSpinner makeSemesterSpinner() {
+        JSpinner spinner = new JSpinner(new SpinnerNumberModel(1, 1, 14, 1));
+        spinner.setPreferredSize(new Dimension(240, 34));
+        spinner.setMinimumSize(new Dimension(180, 34));
+        spinner.setFont(new Font("Segoe UI", Font.PLAIN, 12));
+        spinner.setBorder(BorderFactory.createCompoundBorder(
+                BorderFactory.createLineBorder(BORDER_COLOR, 1),
+                new EmptyBorder(3, 8, 3, 8)));
+        JComponent editor = spinner.getEditor();
+        if (editor instanceof JSpinner.DefaultEditor defaultEditor) {
+            JTextField field = defaultEditor.getTextField();
+            field.setBackground(new Color(13, 19, 38));
+            field.setForeground(TEXT_PRIMARY);
+            field.setCaretColor(TEXT_PRIMARY);
+            field.setBorder(BorderFactory.createEmptyBorder());
+            field.setFont(new Font("Segoe UI", Font.PLAIN, 12));
+        }
+        return spinner;
+    }
+
     private JLabel makeLabel(String text) {
         JLabel l = new JLabel(text);
         l.setFont(new Font("Segoe UI", Font.BOLD, 11));
@@ -674,10 +726,340 @@ public class MahasiswaPanel extends JPanel {
         p.add(field, g);
     }
 
-    private void styleCombo(JComboBox<String> c) {
+    private void styleCombo(JComboBox<?> c) {
         c.setBackground(new Color(13, 19, 38));
         c.setForeground(TEXT_PRIMARY);
         c.setFont(new Font("Segoe UI", Font.PLAIN, 12));
+        c.setPreferredSize(new Dimension(240, 34));
+        c.setMinimumSize(new Dimension(180, 34));
+        c.setMaximumRowCount(8);
+        c.setCursor(Cursor.getPredefinedCursor(Cursor.HAND_CURSOR));
+        c.setBorder(BorderFactory.createCompoundBorder(
+                BorderFactory.createLineBorder(BORDER_COLOR, 1),
+                new EmptyBorder(3, 8, 3, 8)));
+        SwingUi.configurePopups(c);
+    }
+
+    private void loadSemesterCombo(JComboBox<SemesterItem> combo, Integer selectedNomor) {
+        Object pendingNomor = combo.getClientProperty("selectedSemesterNomor");
+        Integer initialNomor = selectedNomor != null
+                ? selectedNomor
+                : pendingNomor instanceof Integer ? (Integer) pendingNomor : null;
+        populateFallbackSemesterCombo(combo, initialNomor);
+
+        new SwingWorker<JsonObject, Void>() {
+            @Override protected JsonObject doInBackground() throws Exception {
+                return AkademikService.getSettings();
+            }
+
+            @Override protected void done() {
+                try {
+                    JsonObject response = get();
+                    combo.removeAllItems();
+                    if (response.get("success").getAsBoolean()) {
+                        JsonArray data = response.getAsJsonObject("data").getAsJsonArray("semester");
+                        for (JsonElement item : data) {
+                            JsonObject semester = item.getAsJsonObject();
+                            if (semester.has("is_active") && !semester.get("is_active").isJsonNull()
+                                    && semester.get("is_active").getAsInt() == 0) {
+                                continue;
+                            }
+                            int nomor = semester.get("nomor").getAsInt();
+                            combo.addItem(new SemesterItem(nomor, safe(semester, "nama_semester")));
+                        }
+                    }
+                    if (combo.getItemCount() == 0) {
+                        combo.addItem(new SemesterItem(0, "Belum ada semester aktif"));
+                    }
+                    Integer targetNomor = selectedNomor;
+                    Object pendingNomor = combo.getClientProperty("selectedSemesterNomor");
+                    if (targetNomor == null && pendingNomor instanceof Integer) {
+                        targetNomor = (Integer) pendingNomor;
+                    }
+                    if (targetNomor != null) {
+                        selectSemester(combo, targetNomor);
+                    }
+                } catch (Exception ex) {
+                    Integer targetNomor = selectedNomor;
+                    Object pendingNomor = combo.getClientProperty("selectedSemesterNomor");
+                    if (targetNomor == null && pendingNomor instanceof Integer) {
+                        targetNomor = (Integer) pendingNomor;
+                    }
+                    populateFallbackSemesterCombo(combo, targetNomor);
+                }
+            }
+        }.execute();
+    }
+
+    private void populateFallbackSemesterCombo(JComboBox<SemesterItem> combo, Integer selectedNomor) {
+        combo.removeAllItems();
+        for (int nomor = 1; nomor <= 14; nomor++) {
+            combo.addItem(new SemesterItem(nomor, "Semester " + nomor));
+        }
+        if (selectedNomor != null) {
+            selectSemester(combo, selectedNomor);
+        } else {
+            combo.setSelectedIndex(0);
+        }
+    }
+
+    private void selectSemester(JComboBox<SemesterItem> combo, int nomor) {
+        for (int i = 0; i < combo.getItemCount(); i++) {
+            SemesterItem item = combo.getItemAt(i);
+            if (item.nomor == nomor) {
+                combo.setSelectedIndex(i);
+                return;
+            }
+        }
+        combo.addItem(new SemesterItem(nomor, "Semester " + nomor));
+        combo.setSelectedIndex(combo.getItemCount() - 1);
+    }
+
+    private void loadSemesterPicker(SemesterPicker picker, Integer selectedNomor) {
+        picker.setOptions(defaultSemesterItems());
+        if (selectedNomor != null) {
+            picker.setSelectedNomor(selectedNomor);
+        }
+
+        new SwingWorker<JsonObject, Void>() {
+            @Override protected JsonObject doInBackground() throws Exception {
+                return AkademikService.getSettings();
+            }
+
+            @Override protected void done() {
+                try {
+                    JsonObject response = get();
+                    if (!response.get("success").getAsBoolean()) {
+                        return;
+                    }
+
+                    List<SemesterItem> options = new ArrayList<>();
+                    JsonArray data = response.getAsJsonObject("data").getAsJsonArray("semester");
+                    for (JsonElement item : data) {
+                        JsonObject semester = item.getAsJsonObject();
+                        if (semester.has("is_active") && !semester.get("is_active").isJsonNull()
+                                && semester.get("is_active").getAsInt() == 0) {
+                            continue;
+                        }
+                        int nomor = semester.get("nomor").getAsInt();
+                        options.add(new SemesterItem(nomor, safe(semester, "nama_semester")));
+                    }
+                    if (!options.isEmpty()) {
+                        int current = picker.getSelectedNomor();
+                        picker.setOptions(options);
+                        if (selectedNomor != null) {
+                            picker.setSelectedNomor(selectedNomor);
+                        } else if (current > 0) {
+                            picker.setSelectedNomor(current);
+                        }
+                    }
+                } catch (Exception ignored) {
+                }
+            }
+        }.execute();
+    }
+
+    private List<SemesterItem> defaultSemesterItems() {
+        List<SemesterItem> items = new ArrayList<>();
+        for (int nomor = 1; nomor <= 14; nomor++) {
+            items.add(new SemesterItem(nomor, "Semester " + nomor));
+        }
+        return items;
+    }
+
+    private JComboBox<Integer> buildAngkatanCombo() {
+        JComboBox<Integer> combo = new JComboBox<>();
+        populateAngkatanCombo(combo, Year.now().getValue(), null);
+        styleCombo(combo);
+        loadAngkatanFromActiveTahunAjaran(combo);
+        return combo;
+    }
+
+    private void loadAngkatanFromActiveTahunAjaran(JComboBox<Integer> combo) {
+        new SwingWorker<JsonObject, Void>() {
+            @Override protected JsonObject doInBackground() throws Exception {
+                return AkademikService.getSettings();
+            }
+
+            @Override protected void done() {
+                try {
+                    Object selected = combo.getSelectedItem();
+                    JsonObject response = get();
+                    if (!response.get("success").getAsBoolean()) {
+                        return;
+                    }
+                    JsonArray data = response.getAsJsonObject("data").getAsJsonArray("tahun_ajaran");
+                    int activeYear = 0;
+                    for (JsonElement item : data) {
+                        JsonObject tahun = item.getAsJsonObject();
+                        if ("aktif".equalsIgnoreCase(safe(tahun, "status"))) {
+                            activeYear = parseFirstYear(safe(tahun, "tahun_ajaran"));
+                            break;
+                        }
+                    }
+                    if (activeYear > 0) {
+                        populateAngkatanCombo(combo, activeYear, selected instanceof Integer ? (Integer) selected : activeYear);
+                    }
+                } catch (Exception ignored) {
+                }
+            }
+        }.execute();
+    }
+
+    private void populateAngkatanCombo(JComboBox<Integer> combo, int startYear, Integer selectedYear) {
+        combo.removeAllItems();
+        for (int year = startYear; year >= startYear - 20; year--) {
+            combo.addItem(year);
+        }
+        combo.setSelectedItem(selectedYear != null ? selectedYear : startYear);
+    }
+
+    private int parseFirstYear(String tahunAjaran) {
+        try {
+            if (tahunAjaran == null || tahunAjaran.length() < 4) {
+                return 0;
+            }
+            return Integer.parseInt(tahunAjaran.substring(0, 4));
+        } catch (NumberFormatException ex) {
+            return 0;
+        }
+    }
+
+    private void selectAngkatan(JComboBox<Integer> combo, int angkatan) {
+        for (int i = 0; i < combo.getItemCount(); i++) {
+            if (combo.getItemAt(i) == angkatan) {
+                combo.setSelectedIndex(i);
+                return;
+            }
+        }
+        combo.addItem(angkatan);
+        combo.setSelectedItem(angkatan);
+    }
+
+    private void loadJurusanCombo(JComboBox<String> combo, String selected) {
+        new SwingWorker<JsonObject, Void>() {
+            @Override protected JsonObject doInBackground() throws Exception {
+                return MahasiswaService.getJurusanList();
+            }
+
+            @Override protected void done() {
+                try {
+                    JsonObject response = get();
+                    combo.removeAllItems();
+                    if (response.get("success").getAsBoolean()) {
+                        for (com.google.gson.JsonElement item : response.getAsJsonArray("data")) {
+                            String jurusan = item.getAsString();
+                            if (jurusan != null && !jurusan.isBlank()) {
+                                combo.addItem(jurusan);
+                            }
+                        }
+                    }
+                    if (selected != null && !selected.isBlank()) {
+                        combo.setSelectedItem(selected);
+                    }
+                    if (combo.getItemCount() == 0) {
+                        combo.addItem("Belum ada jurusan");
+                    }
+                } catch (Exception ex) {
+                    combo.removeAllItems();
+                    combo.addItem(selected != null && !selected.isBlank() ? selected : "Belum ada jurusan");
+                }
+            }
+        }.execute();
+    }
+
+    private class SemesterPicker extends JButton {
+        private final List<SemesterItem> options = new ArrayList<>();
+        private SemesterItem selected;
+
+        SemesterPicker() {
+            setFont(new Font("Segoe UI", Font.PLAIN, 12));
+            setForeground(TEXT_PRIMARY);
+            setBackground(new Color(13, 19, 38));
+            setHorizontalAlignment(SwingConstants.LEFT);
+            setPreferredSize(new Dimension(240, 34));
+            setMinimumSize(new Dimension(180, 34));
+            setCursor(Cursor.getPredefinedCursor(Cursor.HAND_CURSOR));
+            setFocusPainted(false);
+            setBorder(BorderFactory.createCompoundBorder(
+                    BorderFactory.createLineBorder(BORDER_COLOR, 1),
+                    new EmptyBorder(7, 10, 7, 10)));
+            addActionListener(e -> showPickerDialog());
+        }
+
+        void setOptions(List<SemesterItem> items) {
+            int current = getSelectedNomor();
+            options.clear();
+            options.addAll(items);
+            if (current > 0) {
+                setSelectedNomor(current);
+            } else if (!options.isEmpty()) {
+                setSelected(options.get(0));
+            } else {
+                setText("Pilih semester");
+            }
+        }
+
+        void setSelectedNomor(int nomor) {
+            for (SemesterItem item : options) {
+                if (item.nomor == nomor) {
+                    setSelected(item);
+                    return;
+                }
+            }
+            SemesterItem fallback = new SemesterItem(nomor, "Semester " + nomor);
+            options.add(fallback);
+            setSelected(fallback);
+        }
+
+        int getSelectedNomor() {
+            return selected == null ? 0 : selected.nomor;
+        }
+
+        SemesterItem getSelectedSemester() {
+            return selected;
+        }
+
+        private void setSelected(SemesterItem item) {
+            selected = item;
+            setText(item + "  ▾");
+        }
+
+        private void showPickerDialog() {
+            if (options.isEmpty()) {
+                JOptionPane.showMessageDialog(MahasiswaPanel.this,
+                        "Data semester belum tersedia.",
+                        "Semester kosong",
+                        JOptionPane.INFORMATION_MESSAGE);
+                return;
+            }
+            SemesterItem choice = (SemesterItem) JOptionPane.showInputDialog(
+                    MahasiswaPanel.this,
+                    "Pilih semester mahasiswa:",
+                    "Pilih Semester",
+                    JOptionPane.PLAIN_MESSAGE,
+                    null,
+                    options.toArray(new SemesterItem[0]),
+                    selected
+            );
+            if (choice != null) {
+                setSelected(choice);
+            }
+        }
+    }
+
+    private static class SemesterItem {
+        private final int nomor;
+        private final String label;
+
+        private SemesterItem(int nomor, String label) {
+            this.nomor = nomor;
+            this.label = label;
+        }
+
+        @Override public String toString() {
+            return nomor > 0 ? nomor + " - " + label : label;
+        }
     }
 
     private JButton buildBtn(String text, Color bg) {
@@ -750,6 +1132,7 @@ public class MahasiswaPanel extends JPanel {
             removeAll();
             add(makeActionBtn("Detail", new Color(30, 41, 70)));
             if (JwtHelper.getInstance().isAdmin()) add(makeActionBtn("Edit", BLUE));
+            if (JwtHelper.getInstance().isAdmin()) add(makeActionBtn("Hapus", new Color(185, 28, 28)));
             setBackground(sel ? new Color(59, 130, 246, 40) : (r % 2 == 0 ? TABLE_BG : ROW_ALT));
             return this;
         }
@@ -771,6 +1154,7 @@ public class MahasiswaPanel extends JPanel {
         private final JPanel panel = new JPanel(new FlowLayout(FlowLayout.CENTER, 4, 6));
         private final JButton btnDetail = makeActionBtn("Detail", new Color(30, 41, 70));
         private final JButton btnEdit   = makeActionBtn("Edit", BLUE);
+        private final JButton btnDelete = makeActionBtn("Hapus", new Color(185, 28, 28));
         private String nim;
 
         ActionEditor() {
@@ -778,8 +1162,10 @@ public class MahasiswaPanel extends JPanel {
             panel.setBackground(TABLE_BG);
             panel.add(btnDetail);
             if (JwtHelper.getInstance().isAdmin()) panel.add(btnEdit);
+            if (JwtHelper.getInstance().isAdmin()) panel.add(btnDelete);
             btnDetail.addActionListener(e -> { fireEditingStopped(); if (nim != null) showDetailDialog(nim); });
             btnEdit.addActionListener(e -> { fireEditingStopped(); if (nim != null) showForm(nim); });
+            btnDelete.addActionListener(e -> { fireEditingStopped(); if (nim != null) deleteMahasiswa(nim); });
         }
 
         private JButton makeActionBtn(String text, Color bg) {
